# rwth-exmatrikulator-bot

./: Cargo.toml  docker-compose.yml
db/migrations/: 20201228001721_init.sql  20201228014636_timestamps.sql
src/: commands.rs  db.rs  main.rs
