[package]
name = "rwth-shieldy"
version = "0.1.0"
authors = ["Gero Gerke <hello@gerogerke.de>"]
edition = "2018"

[dependencies]
telegram-bot = "0.8.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full", "time"]}
sqlx = {version = "0.4.1", features = ["runtime-tokio-native-tls", "postgres"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.8.2"